Add Dayz React component

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" rel="stylesheet">
+      <link href="css/dayz.css" rel="stylesheet">
       <link href="/css/custom-site.css"  rel="stylesheet">
 	  <title>Minimalist Fulcro Template</title>
   </head>
